Signed-off-by: yixuanzi <yeying0311@126.com>

--- a/plugins/config/plugins.ini
+++ b/plugins/config/plugins.ini
@@ -1,5 +1,8 @@
 [zoomeye]
-useragent=Mozilla/5.0 (Windows NT 6.1; WOW64; rv:42.0) Gecko/20100101 Firefox/42.0
+token=q5tp38cxp6f8dp30jj9k5gc62m9fn1hp
+token1=q5tp38cxp6f8dp30jj9k5gc62m9fn1hp
+token2=n7lr3ezjxw4eymwztzc0dmn368krehrt
+token3=qiqjhxgk8rh7ybpb0pw6e2nvpcr0v21i
+token4=k6gfxs1q56c0kdki90vq2oks159f4610
+token5=zb6olc5iqlyz0wnp7ysl5p4f0xl1hs7h
 
-[test]
-name=123
