--- a/plugins/config/plugins.ini
+++ b/plugins/config/plugins.ini
@@ -6,3 +6,7 @@ token3=qiqjhxgk8rh7ybpb0pw6e2nvpcr0v21i
 token4=k6gfxs1q56c0kdki90vq2oks159f4610
 token5=zb6olc5iqlyz0wnp7ysl5p4f0xl1hs7h
 
+[booksgcc]
+user=yeying0311
+passwd=test1234
+
